# planning_visualization

./: README.md
action_planning/: CMakeLists.txt  package.xml
action_planning/launch/: action_server.launch.py
action_planning/src/: move_robot_client.cpp  move_robot_server.cpp  point_pub_test.cpp  point_pub_test.py  stretch_robot_server.py
moveit_action/: CMakeLists.txt  package.xml
moveit_action/action/: RobotMove.action
visualization/: package.xml  setup.py
visualization/launch/: cam_pos.launch.py  camera_pose_launch.launch.py  stretch_ar_launch.launch.py  web_interface_launch.launch.py
visualization/visualization/: ar_locate_object.py  aruco_camera_position.py  aruco_detection.py  detect_aruco_detection.py  object_detect.py  stretch_ar_transforms.py
visualization/webpage/: RosLib.umd.cjs  index.html  main.js  mjpegcanvas.min.js
web_interface/: CMakeLists.txt  eslint.config.mjs  launch_interface.sh  package.json  package.xml  server.js  start_robot_browser.js  start_ros2.sh  start_web_server_and_robot_browser.sh  stop_interface.sh  tsconfig.json  ui.html  webcam.py  webcame_interface.py  webpack.js  wrobot_move.py
web_interface/launch/: gripper_camera.launch.py  multi_camera.launch.py  navigation_camera.launch.py  web_interface.launch.py
web_interface/maps/: map.yaml
web_interface/nodes/: gripper_camera.py
web_interface/react_app/my-react-app/: package-lock.json  package.json
web_interface/src/pages/home/: index.css
web_interface/src/shared/: commands.tsx  remotrobot.tsx  util.tsx  webrtcconnections.tsx
web_interface/src/web/home/: index.html
web_interface/src/web/operator /: index.html
(+46 files in other folders)
